--- a/config.toml
+++ b/config.toml
@@ -28,11 +28,11 @@ pluralizeListTitles = false
     # The set of favicons used are based on the write-up from this link:
     # https://github.com/audreyr/favicon-cheat-sheet
     # Please see the favicon partial template for more information
-    loadFavicon          = false
+    loadFavicon          = true
     faviconVersion       = ""
 
     # Disable showing the social sharing links on blog posts
-    socialShareDisabled = false
+    socialShareDisabled = true
 
     # Load custom CSS or JavaScript files. The variable is an array so that you
     # can load multiple files if necessary. You can also load the standard theme
