--- a/config.toml
+++ b/config.toml
@@ -71,14 +71,14 @@ pluralizeListTitles = false
 # You can use identifier to prepend a font awesome icon to your text
 
 [[menu.main]]
-    name = "Blog"
+    name = "Home"
     url = "/"
-    identifier = "fa fa-blog"
+    identifier = "fa fa-home"
     weight = 1
 
 [[menu.main]]
-    name = "Home"
-    url = "/home/"
+    name = "Blog"
+    url = "/Blog/"
     identifier = "fa fa-newspaper-o"
     weight = 3
 
