--- a/config.toml
+++ b/config.toml
@@ -72,9 +72,15 @@ pluralizeListTitles = false
 
 [[menu.main]]
     name = "Home"
-    url = "/Home/"
+    url = "/"
     identifier = "fa fa-home"
     weight = 1
+    
+[[menu.main]]
+    name = "About"
+    url = "/about/"
+    identifier = "fa fa-id-card-o"
+    weight = 2
 
 [[menu.main]]
     name = "Blog"
